<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_recipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="6dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:contentPadding="0dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipeRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="0dp">

        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="Recipe Name"

            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/expandableRecipeInfoPanel"
            app:layout_constraintEnd_toStartOf="@+id/recipePowerOnButton"
            app:layout_constraintLeft_toLeftOf="@+id/recipePowerOnButton"
            app:layout_constraintRight_toLeftOf="@+id/recipeImage"
            app:layout_constraintStart_toEndOf="@+id/recipeImage"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/recipePowerOnButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/power_rounded"
            android:visibility="visible"
            app:backgroundTint="@color/md_theme_light_error"
            app:layout_constraintBottom_toTopOf="@+id/expandableRecipeInfoPanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pregressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%"
            android:textSize="10sp"
            android:visibility="gone"
            android:textColor="@color/md_theme_light_primary"
            app:layout_constraintBottom_toBottomOf="@+id/recipeProgress"
            app:layout_constraintEnd_toEndOf="@+id/recipeProgress"
            app:layout_constraintStart_toStartOf="@+id/recipeProgress"
            app:layout_constraintTop_toTopOf="@+id/recipeProgress" />

        <ProgressBar
            android:id="@+id/recipeProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="12dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progress_bar"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/recipePowerOnButton"
            app:layout_constraintEnd_toEndOf="@+id/recipePowerOnButton"
            app:layout_constraintTop_toTopOf="@+id/recipePowerOnButton" />

        <RelativeLayout
            android:id="@+id/expandableRecipeInfoPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeImage">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recipeInfoPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recipeNotes"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/temperature"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/recipeInfoTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="100 °C"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/duration"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/recipeInfoDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="11 min 10 sec"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/stirring"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/recipeInfoStirring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="No"
                    app:layout_constraintStart_toEndOf="@+id/textView10"
                    app:layout_constraintTop_toTopOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/power"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/recipeInfoPower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="800 W"
                    app:layout_constraintStart_toEndOf="@+id/textView12"
                    app:layout_constraintTop_toTopOf="@+id/textView12" />

                <TextView
                    android:id="@+id/recipeInfoTimerStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:text="Timer starts immediately:"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/recipeNotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/buttonsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recipeInfoPanel"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/recipeLeftButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_weight=".5"
                    android:background="#FFF"
                    android:text="@string/delete"
                    android:textColor="@color/md_theme_light_error"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/recipeRightButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight=".5"
                    android:background="#FFF"
                    android:text="@string/edit"
                    android:textColor="@color/md_theme_light_primary"
                    app:backgroundTint="@color/white" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/buttonsLinearLayout"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/thermometerImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icons8_thermometer_up_96" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>